--- a/Part-1/1.14/Dockerfile.backend
+++ b/Part-1/1.14/Dockerfile.backend
@@ -1,3 +1,4 @@
+
 FROM golang:1.16
 
 EXPOSE 8080
@@ -6,6 +7,8 @@ COPY . /usr/src/backend-app
 
 WORKDIR /usr/src/backend-app
 
-RUN REQUEST_ORIGIN=http://localhost:5000/ go build
+ENV REQUEST_ORIGIN=http://localhost:5000
+
+RUN go build
 
 CMD [ "./server" ]
